mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_unterminated_comment.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Unterminated block comment
--> test_scripts/error_cases/lexer_unterminated_comment.mux:2:1
   |
 2 | /* hello
   | ^
   |
= help: Add a closing '*/' to end the block comment
